--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,11 @@
       rel="stylesheet"
     />
 
+    <script
+      src="https://kit.fontawesome.com/4d9a582075.js"
+      crossorigin="anonymous"
+    ></script>
+
     <title>React App</title>
   </head>
   <body>
